builder/tests/10-missing-equals.stderr
error: expected `=`
 --> tests/10-missing-equals.rs:6:21
  |
6 |     #[builder(each  "arg")]
  |                     ^^^^^
